@@ -1,0 +1,17 @@
+﻿
+class Person
+{
+	var Name;
+	var Age;
+	
+	function AddYears(years) 
+	{
+		this.Age = this.Age + years;
+	}
+}
+
+adam = new Person();
+
+adam.AddYears(800);
+adam.Name = "Adam";
+
